--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,7 +18,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
 environment:
-  sdk: ">=2.17.1 <3.0.0"
+  sdk: ">=1.22.6 <3.0.0"
 
 # Dependencies specify other packages that your package needs in order to work.
 # To automatically upgrade your package dependencies to the latest versions
@@ -38,6 +38,11 @@ dependencies:
   list_tile_switch: ^1.0.0
   provider: ^6.0.3
   shared_preferences: ^2.0.15
+  badges: ^2.0.2
+  flutter_staggered_grid_view: ^0.6.1
+  backdrop: ^0.8.0
+  carousel_pro: ^1.0.0
+  flutter_swiper: ^1.1.6
 
 dev_dependencies:
   flutter_test:
