--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,15 +34,9 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
-  flutter_icons: ^1.1.0
-  list_tile_switch: ^1.0.0
   provider: ^6.0.3
   shared_preferences: ^2.0.15
-  badges: ^2.0.2
-  flutter_staggered_grid_view: ^0.6.1
-  backdrop: ^0.4.7
-  carousel_pro: ^1.0.0
-  flutter_swiper: ^1.1.6
+  flutter_iconly: ^1.0.2
 
 dev_dependencies:
   flutter_test:
