--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,10 @@ dependencies:
   provider: ^6.0.3
   shared_preferences: ^2.0.15
   flutter_iconly: ^1.0.2
+  fancy_shimmer_image: ^2.0.2
+  card_swiper: ^2.0.3
+  flutter_staggered_grid_view: ^0.6.1
+  badges: ^2.0.2
 
 dev_dependencies:
   flutter_test:
