--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -65,7 +65,11 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
+  assets:
+    - assets/images/
+    - assets/images/cat/
+    - assets/images/landing/
+    - assets/images/offres/
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
