--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   # firebase
   firebase_core: ^1.17.1
   firebase_auth: ^3.3.19
+  flutter_spinkit: ^5.1.0
 
 dev_dependencies:
   flutter_test:
