--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,7 @@ dependencies:
   firebase_core: ^1.17.1
   firebase_auth: ^3.3.19
   flutter_spinkit: ^5.1.0
+  google_sign_in: ^5.3.3
 
 dev_dependencies:
   flutter_test:
