--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   card_swiper: ^2.0.3
   flutter_staggered_grid_view: ^0.6.1
   badges: ^2.0.2
+  fluttertoast: ^8.0.9
   # firebase
   firebase_core: ^1.17.1
   firebase_auth: ^3.3.19
