--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,7 @@ dependencies:
   firebase_auth: ^3.3.19
   flutter_spinkit: ^5.1.0
   google_sign_in: ^5.3.3
+  cloud_firestore: ^3.1.17
 
 dev_dependencies:
   flutter_test:
